2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: multiple tag deletion.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c (gimp_combo_tag_entry_event):
	when arrow is clicked indicate that event is handled.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: improved tag auto-completion handling.

2008-08-08  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c (gimp_combo_tag_entry_new):
	fixed with of combo box arrow area so that entry's cursor would
	not be covered by it.

2008-08-08  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.[ch]: reorganized and rewritten jellybean
	  handling code.

2008-08-07  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_layout_tags): improved
	handling of clicking empty area in popup makes it close.

2008-08-07  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.[ch]
	* app/core/gimptag.[ch]
	* app/core/gimptagcache.[ch]
	* app/widgets/gimpcombotagentry.[ch]
	* app/widgets/gimptagentry.[ch]
	* app/widgets/gimptagpopup.c: code cleanup and documentation.

2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_new): removed left and
	right border which used to be displayed only when scrolling was on.

2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	* app/widgets/gimptagpopup.c: fixed owner/child responsibilities.

2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_new): upper scroll arrow
	is initialy insensitive as it is at the minimum scroll position.

2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	* app/widgets/gimptagentry.c
	* app/widgets/gimptagpopup.c: implemented RTL text direction support.

2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>
